LinKreta_POC_Repository/force-app/main/default/objects/GM_PARAMETER_GRPS__x/GM_PARAMETER_GRPS__x.object-meta.xml
<CustomObject>
    <description>GM_PARAMETER_GRPS</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>GM_PARAMETER_GRPS</externalName>
    <label>GM_PARAMETER_GRPS</label>
    <pluralLabel>GM_PARAMETER_GRPS</pluralLabel>
</CustomObject>