LinKreta_POC_Repository/force-app/main/default/objects/GM_PARAMETER_GRPS__x/fields/IS_DELETED__c.field-meta.xml
<CustomField>
    <fullName>IS_DELETED__c</fullName>
    <description>IS_DELETED</description>
    <externalDeveloperName>IS_DELETED</externalDeveloperName>
    <label>IS_DELETED</label>
    <length>1</length>
    <type>Text</type>
</CustomField>