LinKreta_POC_Repository/force-app/main/default/objects/GM_PARAMETER_GRPS__x/fields/MODULE_NO__c.field-meta.xml
<CustomField>
    <fullName>MODULE_NO__c</fullName>
    <description>MODULE_NO</description>
    <externalDeveloperName>MODULE_NO</externalDeveloperName>
    <label>MODULE_NO</label>
    <length>2</length>
    <type>Text</type>
</CustomField>