LinKreta_POC_Repository/force-app/main/default/objects/GM_PARAMETER_GRPS__x/fields/PARA_GRP_DESC__c.field-meta.xml
<CustomField>
    <fullName>PARA_GRP_DESC__c</fullName>
    <description>PARA_GRP_DESC</description>
    <externalDeveloperName>PARA_GRP_DESC</externalDeveloperName>
    <label>PARA_GRP_DESC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>