LinKreta_POC_Repository/force-app/main/default/objects/GM_PARAMETER_GRPS__x/fields/PARA_GRP_ID__c.field-meta.xml
<CustomField>
    <fullName>PARA_GRP_ID__c</fullName>
    <description>PARA_GRP_ID</description>
    <externalDeveloperName>PARA_GRP_ID</externalDeveloperName>
    <label>PARA_GRP_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>