LinKreta_POC_Repository/force-app/main/default/objects/GM_PARAMETER_GRPS__x/fields/PARA_GRP_MID__c.field-meta.xml
<CustomField>
    <fullName>PARA_GRP_MID__c</fullName>
    <description>PARA_GRP_MID</description>
    <externalDeveloperName>PARA_GRP_MID</externalDeveloperName>
    <label>PARA_GRP_MID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>